--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
+    "cheerio": "1.0.0-rc.12",
     "eslint": "^8.39.0",
     "eslint-config-foxkit": "^2.0.0",
     "eslint-config-prettier": "^8.8.0",
     "prettier": "^2.8.8",
     "tsx": "^3.12.6",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "zod": "^3.21.4"
   }
 }
