--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/inquirer": "^9.0.3",
     "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
@@ -19,7 +20,10 @@
     "eslint": "^8.39.0",
     "eslint-config-foxkit": "^2.0.0",
     "eslint-config-prettier": "^8.8.0",
+    "inquirer": "^9.2.0",
+    "parse-diff": "^0.11.1",
     "prettier": "^2.8.8",
+    "spacetime": "^7.4.3",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4",
     "zod": "^3.21.4"
