--- a/package.json
+++ b/package.json
@@ -12,16 +12,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@types/diff": "^5.0.3",
     "@types/inquirer": "^9.0.3",
     "@types/node": "^18.16.0",
     "@typescript-eslint/eslint-plugin": "^5.59.1",
     "@typescript-eslint/parser": "^5.59.1",
     "cheerio": "1.0.0-rc.12",
+    "diff": "^5.1.0",
     "eslint": "^8.39.0",
     "eslint-config-foxkit": "^2.0.0",
     "eslint-config-prettier": "^8.8.0",
     "inquirer": "^9.2.0",
-    "parse-diff": "^0.11.1",
+    "picocolors": "^1.0.0",
     "prettier": "^2.8.8",
     "spacetime": "^7.4.3",
     "tsx": "^3.12.6",
